ordered-spring-boot-starter: apply google style