@@ -1,49 +1,51 @@
 package com.pavelshapel.ordered.spring.boot.starter;
 
-import jakarta.annotation.PostConstruct;
-import org.springframework.beans.factory.annotation.Autowired;
-
-import java.util.List;
-import java.util.function.Function;
-
 import static java.util.Comparator.comparing;
 import static java.util.stream.Collectors.toList;
 import static org.springframework.util.CollectionUtils.isEmpty;
 
-public abstract class OrderedComponentsProcessor<P, R, C extends OrderedComponent<P, R>> implements Function<P, List<R>> {
-    @Autowired
-    private List<C> components;
+import jakarta.annotation.PostConstruct;
+import java.util.List;
+import java.util.function.Function;
+import org.springframework.beans.factory.annotation.Autowired;
 
-    private List<C> orderedComponents;
+public abstract class OrderedComponentsProcessor<P, R, C extends OrderedComponent<P, R>>
+    implements Function<P, List<R>> {
+  @Autowired private List<C> components;
 
-    @PostConstruct
-    private void init() {
-        orderedComponents = components.stream()
-                .filter(this::isComponentPresentInProcessingOrder)
-                .sorted(comparing(this::getProcessingOrder))
-                .toList();
-    }
+  private List<C> orderedComponents;
 
-    @Override
-    public final List<R> apply(P payload) {
-        return orderedComponents.stream().filter(component -> component.isApplicable(payload))
-                .map(component -> component.apply(payload))
-                .toList();
-    }
+  @PostConstruct
+  private void init() {
+    orderedComponents =
+        components.stream()
+            .filter(this::isComponentPresentInProcessingOrder)
+            .sorted(comparing(this::getProcessingOrder))
+            .toList();
+  }
 
-    protected List<Class<? extends C>> getClassesInProcessingOrder() {
-        return components.stream()
-                .map(C::getClass)
-                .map(componentClass -> (Class<? extends C>) componentClass)
-                .collect(toList());
-    }
+  @Override
+  public final List<R> apply(P payload) {
+    return orderedComponents.stream()
+        .filter(component -> component.isApplicable(payload))
+        .map(component -> component.apply(payload))
+        .toList();
+  }
 
-    private boolean isComponentPresentInProcessingOrder(C component) {
-        List<Class<? extends C>> classesInProcessingOrder = getClassesInProcessingOrder();
-        return !isEmpty(classesInProcessingOrder) && classesInProcessingOrder.contains(component.getClass());
-    }
+  protected List<Class<? extends C>> getClassesInProcessingOrder() {
+    return components.stream()
+        .map(C::getClass)
+        .map(componentClass -> (Class<? extends C>) componentClass)
+        .collect(toList());
+  }
 
-    private int getProcessingOrder(C component) {
-        return getClassesInProcessingOrder().indexOf(component.getClass());
-    }
+  private boolean isComponentPresentInProcessingOrder(C component) {
+    List<Class<? extends C>> classesInProcessingOrder = getClassesInProcessingOrder();
+    return !isEmpty(classesInProcessingOrder)
+        && classesInProcessingOrder.contains(component.getClass());
+  }
+
+  private int getProcessingOrder(C component) {
+    return getClassesInProcessingOrder().indexOf(component.getClass());
+  }
 }
